...
                    android:background="@null"
                    android:contentDescription="@string/event_detail_back"
                    android:padding="10dp"
                    android:src="@drawable/arrow_back" />

                <TextView
                    android:id="@+id/createEventTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/varela_round_regular"
                    android:text="@string/create_event_title"
                    android:textColor="@color/white"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/createEventNextButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_waitlist_button"
...
